<resources>
    <string name="app_name">QuizApplication</string>
    <string name="app_menu">Main Menu</string>
    <string name="app_multiple">Multiple Option</string>
    <string name="app_one">Single Option</string>
    <string name="app_written">Written Your Answer</string>
    <string name="app_finish">Quiz Results</string>
    <string name="name_hint">Insert your name </string>
    <string name="one_question">What is the capital of \ </string>
    <string name="one_question1">Romania</string>
    <string name="one_question1_answer1">Bucharest</string>
    <string name="one_question1_answer2">Mexico City</string>
    <string name="one_question1_answer3">Brisbane</string>
    <string name="one_question1_answer4">Caracas</string>
    <string name="one_question2">Italy</string>
    <string name="one_question2_answer1">Vienna</string>
    <string name="one_question2_answer2">Zagreb</string>
    <string name="one_question2_answer3">Rome</string>
    <string name="one_question2_answer4">Sofia</string>
    <string name="one_question3">Mongolia</string>
    <string name="one_question3_answer1">Ulaanbaatar</string>
    <string name="one_question3_answer2">Colombo</string>
    <string name="one_question3_answer3">Jakarta</string>
    <string name="one_question3_answer4">Kuala Lumpur</string>
    <string name="one_question4">Canada</string>
    <string name="one_question4_answer1">Washington</string>
    <string name="one_question4_answer2">Ottawa</string>
    <string name="one_question4_answer3">Sidney</string>
    <string name="one_question4_answer4">Wellington</string>
    <string name="one_question5">Russia</string>
    <string name="one_question5_answer1">Napoli</string>
    <string name="one_question5_answer2">Dhaka</string>
    <string name="one_question5_answer3">New York</string>
    <string name="one_question5_answer4">Moscow</string>
    <string name="multiple_question">Which capitals are located in North America </string>
    <string name="multiple_question1_answer1">Sofia</string>
    <string name="multiple_question1_answer2">Washington</string>
    <string name="multiple_question1_answer3">Paris</string>
    <string name="multiple_question1_answer4">Mexico City</string>
    <string name="multiple_question2">Which capitals are located in Europe</string>
    <string name="multiple_question2_answer1">Zagreb</string>
    <string name="multiple_question2_answer2">Cape Town</string>
    <string name="multiple_question2_answer3">Hong Kong</string>
    <string name="multiple_question2_answer4">Warsaw</string>
    <string name="multiple_question3">Which capitals are located in South America</string>
    <string name="multiple_question3_answer1">Santiago</string>
    <string name="multiple_question3_answer2">Lima</string>
    <string name="multiple_question3_answer3">Budapest</string>
    <string name="multiple_question3_answer4">San Francisco</string>
    <string name="multiple_question4">Which capitals are located in Africa</string>
    <string name="multiple_question4_answer1">Kathmandu</string>
    <string name="multiple_question4_answer2">Gaborone</string>
    <string name="multiple_question4_answer3">Kyoto</string>
    <string name="multiple_question4_answer4">Riga</string>
    <string name="multiple_question5">Which capitals are located in Asia</string>
    <string name="multiple_question5_answer1">Ulaanbataar</string>
    <string name="multiple_question5_answer2">Cape Town</string>
    <string name="multiple_question5_answer3">New Delhi</string>
    <string name="multiple_question5_answer4">Cadiz</string>
    <string name="writeIt_question">What is the capital of \ </string>
    <string name="writeIt_question1">Iran</string>
    <string name="writeIt_answer1">Tehran</string>
    <string name="writeIt_question2">France</string>
    <string name="writeIt_answer2">Paris</string>
    <string name="writeIt_question3">Italy</string>
    <string name="writeIt_answer3">Rome</string>
    <string name="writeIt_question4">Turkey</string>
    <string name="writeIt_answer4">Ankara</string>
    <string name="writeIt_question5">England</string>
    <string name="writeIt_answer5">London</string>
    <string name="question_mark"> \?</string>
    <string name="button_start">Start</string>
    <string name="button_rules">Rules</string>
    <string name="button_multiple_choice">Multiple Option</string>
    <string name="button_one_option">Single Option</string>
    <string name="button_written_answer">Write Your Answer</string>
    <string name="button_back_main">Go back to the main screen</string>
    <string name="button_back_menu">Main menu</string>
    <string name="type_answer">Type your answer</string>
    <string name="congratulations">Congratulations</string>
    <string name="final_score">Final score</string>
    <string name="welcome">Welcome!</string>
    <string name="choose">Select your game mode</string>
    <string name="button_next_question">Next question</string>
    <string name="time">Time</string>
</resources>