<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizzapplication.SingleOption">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/one_question"
            style="@style/text_typical"
            android:text="@string/one_question" />

        <TextView
            android:id="@+id/one_question1"
            style="@style/text_typical"
            android:text="@string/one_question1" />

        <TextView
            style="@style/text_typical"
            android:text="@string/question_mark" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/one_answer1"
            style="@style/answer"
            android:text="@string/one_question1_answer1"
            android:buttonTint="@color/colorPrimaryDark"/>

        <RadioButton
            android:id="@+id/one_answer2"
            style="@style/answer"
            android:text="@string/one_question1_answer2"
            android:buttonTint="@color/colorPrimaryDark"
            />

        <RadioButton
            android:id="@+id/one_answer3"
            style="@style/answer"
            android:text="@string/one_question1_answer3"
            android:buttonTint="@color/colorPrimaryDark"/>

        <RadioButton
            android:id="@+id/one_answer4"
            style="@style/answer"
            android:text="@string/one_question1_answer4"
            android:buttonTint="@color/colorPrimaryDark"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_next_question"
            style="@style/normal_2"
            android:onClick="nextQuestion"
            android:text="@string/button_next_question" />

    </RelativeLayout>

</LinearLayout>